--- a/pub/fuzzer.tex
+++ b/pub/fuzzer.tex
@@ -1,26 +1,4 @@
-%-----------------------------------------------------------------------------
-%
-%               Template for sigplanconf LaTeX Class
-%
-% Name:         sigplanconf-template.tex
-%
-% Purpose:      A template for sigplanconf.cls, which is a LaTeX 2e class
-%               file for SIGPLAN conference proceedings.
-%
-% Guide:        Refer to "Author's Guide to the ACM SIGPLAN Class,"
-%               sigplanconf-guide.pdf
-%
-% Author:       Paul C. Anagnostopoulos
-%               Windfall Software
-%               978 371-2316
-%               paul@windfall.com
-%
-% Created:      15 February 2005
-%
-%-----------------------------------------------------------------------------
-
-
-\documentclass[preprint]{sigplanconf}
+\documentclass[preprint,10pt]{sigplanconf}
 
 % The following \documentclass options may be useful:
 %
@@ -32,8 +10,8 @@
 
 \begin{document}
 
-\conferenceinfo{WXYZ '05}{date, City.} 
-\copyrightyear{2005} 
+\conferenceinfo{PLATEAU '12}{October 21, Tucson (AZ)} 
+\copyrightyear{2012} 
 \copyrightdata{[to be supplied]} 
 
 \titlebanner{banner above paper title}        % These are ignored unless
@@ -42,12 +20,9 @@
 \title{Title Text}
 \subtitle{Subtitle Text, if any}
 
-\authorinfo{Name1}
-           {Affiliation1}
-           {Email1}
-\authorinfo{Name2\and Name3}
-           {Affiliation2/3}
-           {Email2/3}
+\authorinfo{Diomidis Spinellis\and Vassilios Karakoidas}
+           {Athens University of Economics and Business}
+           {\{dds, bkarak\}@aueb.gr}
 
 \maketitle
 
