still trying to fix bibtex

--- a/pub/fuzzer.tex
+++ b/pub/fuzzer.tex
@@ -48,7 +48,8 @@ Acknowledgments, if needed.
 
 % We recommend abbrvnat bibliography style.
 
-\bibliographystyle{abbrvnat}
+\bibliographystyle{plain}
+%\bibliographystyle{abbrvnat}
 \bibliography{fuzzer}
 
 % The bibliography should be embedded for final submission.
