found error; added missing \end{document}

--- a/pub/fuzzer.tex
+++ b/pub/fuzzer.tex
@@ -48,8 +48,7 @@ Acknowledgments, if needed.
 
 % We recommend abbrvnat bibliography style.
 
-\bibliographystyle{plain}
-%\bibliographystyle{abbrvnat}
+\bibliographystyle{abbrvnat}
 \bibliography{fuzzer}
 
 % The bibliography should be embedded for final submission.
@@ -62,4 +61,4 @@ Acknowledgments, if needed.
 
 %\end{thebibliography}
 
-%\end{document}
+\end{document}
