added dummy section

--- a/pub/fuzzer.tex
+++ b/pub/fuzzer.tex
@@ -42,6 +42,18 @@ keyword1, keyword2
 
 The text of the paper begins here. \cite{C99}
 
+\section{Related Work}
+
+\section{Experiment}
+
+\subsection{Methodology}
+
+\subsection{Results}
+
+\subsection{Discussion}
+
+\section{Conclusions}
+
 \acks
 
 Acknowledgments, if needed.
