added one small idea to introduction

--- a/pub/fuzzer.tex
+++ b/pub/fuzzer.tex
@@ -12,7 +12,7 @@
 
 \conferenceinfo{PLATEAU '12}{October 21, Tucson (AZ)} 
 \copyrightyear{2012} 
-\copyrightdata{[to be supplied]} 
+\copyrightdata{[to be supplied]}
 
 %\titlebanner{banner above paper title}        % These are ignored unless
 %\preprintfooter{short description of paper}   % 'preprint' option specified.
@@ -40,11 +40,19 @@ Programming Languages, Compiler,
 
 \section{Introduction}
 
-The text of the paper begins here. \cite{C99}
+\cite{C99}
+
+\begin{itemize}
+	\item Refactoring tool may act as fuzzers (they are programs and we have to assume that they have bugs), thus we are not measuring the resiliense of the programming languages against the human factor, we do it even against automated code refactoring tools.
+\end{itemize}
 
 \section{Related Work}
 
 \section{Experiment}
+
+%\begin{table}
+	
+%\end{table}
 
 \subsection{Methodology}
 
