added a table with the selected tasks; added one publication

--- a/pub/fuzzer.bib
+++ b/pub/fuzzer.bib
@@ -9,3 +9,13 @@
 	Keywords = {c-language, foundation},
 	Institution = {ISO/IEC},
 }
+
+@book{TJC08,
+ author = {Ari Takanen and Jared DeMott and Charlie Miller},
+ title = {Fuzzing for Software Security Testing and Quality Assurance},
+ year = {2008},
+ isbn = {1596932147, 9781596932142},
+ edition = {1},
+ publisher = {Artech House, Inc.},
+ address = {Norwood, MA, USA},
+}
