--- a/pub/fuzzer.tex
+++ b/pub/fuzzer.tex
@@ -48,11 +48,26 @@ Programming Languages, Compiler,
 
 \section{Related Work}
 
+Fuzzing ... \cite{TJC08}
+
 \section{Experiment}
 
-%\begin{table}
-	
-%\end{table}
+\begin{table}
+\begin{tabular}{ l p{4cm}}
+ \hline
+
+\hline
+AccumFactory & \\
+Dow & \\
+FlatList & \\
+FuncComp & \\
+Horner & \\
+\hline
+\end{tabular}
+\end{center}
+\caption{List of selected Rosseta Code tasks}
+\label{tab:Tasks}	
+\end{table}
 
 \subsection{Methodology}
 
