removed urls; added one more citation

--- a/pub/fuzzer.bib
+++ b/pub/fuzzer.bib
@@ -2,7 +2,6 @@
 	Priority = {0},
 	Posted-At = {2008-06-09 09:33:44},
 	Author = {{ISO}},
-	Url = {http://www.open-std.org/JTC1/SC22/WG14/www/docs/n1124.pdf},
 	Title = {{The ANSI C standard (C99)}},
 	Number = {WG14 N1124},
 	Year = {1999},
@@ -11,11 +10,32 @@
 }
 
 @book{TJC08,
- author = {Ari Takanen and Jared DeMott and Charlie Miller},
- title = {Fuzzing for Software Security Testing and Quality Assurance},
- year = {2008},
- isbn = {1596932147, 9781596932142},
- edition = {1},
- publisher = {Artech House, Inc.},
- address = {Norwood, MA, USA},
+	author = {Ari Takanen and Jared DeMott and Charlie Miller},
+	title = {Fuzzing for Software Security Testing and Quality Assurance},
+	year = {2008},
+	isbn = {1596932147, 9781596932142},
+	edition = {1},
+	publisher = {Artech House, Inc.},
+	address = {Norwood, MA, USA},
 }
+
+@article{WWGZ11,
+	author = {Tielei Wang and Tao Wei and Guofei Gu and Wei Zou},
+	title = {Checksum-Aware Fuzzing Combined with Dynamic Taint Analysis and Symbolic Execution},
+	journal = {ACM Transactions of Information Systems Security},
+	issue_date = {September 2011},
+	volume = {14},
+	number = {2},
+	month = sep,
+	year = {2011},
+	issn = {1094-9224},
+	pages = {15:1--15:28},
+	articleno = {15},
+	numpages = {28},
+	url = {http://doi.acm.org/10.1145/2019599.2019600},
+	doi = {10.1145/2019599.2019600},
+	acmid = {2019600},
+	publisher = {ACM},
+	address = {New York, NY, USA},
+	keywords = {Vulnerability detection, checksum-aware fuzzing, symbolic execution, taint analysis},
+} 
