--- a/pub/fuzzer.tex
+++ b/pub/fuzzer.tex
@@ -43,12 +43,13 @@ Programming Languages, Compiler,
 \cite{C99}
 
 \begin{itemize}
-	\item Refactoring tool may act as fuzzers (they are programs and we have to assume that they have bugs), thus we are not measuring the resiliense of the programming languages against the human factor, we do it even against automated code refactoring tools.
+	\item The common case in this experiment is the human factor
+	\item Refactoring tools may act as fuzzers (they are programs and we have to assume that they have bugs), thus we are not measuring the resiliense of the programming languages against the human factor, we do it even against automated code refactoring tools.
 \end{itemize}
 
 \section{Related Work}
 
-Fuzzing ... \cite{TJC08}
+Fuzzing ... \cite{TJC08}, \cite{WWGZ11}
 
 \section{Experiment}
 
@@ -56,7 +57,7 @@ Fuzzing ... \cite{TJC08}
 \begin{center}
 \begin{tabular}{ l p{4cm}}
  \hline
-
+Task Name & Description\\
 \hline
 AccumFactory & \\
 Dow & \\
