adding bibliography and ideas

--- a/pub/fuzzer.bib
+++ b/pub/fuzzer.bib
@@ -32,10 +32,35 @@
 	pages = {15:1--15:28},
 	articleno = {15},
 	numpages = {28},
-	url = {http://doi.acm.org/10.1145/2019599.2019600},
 	doi = {10.1145/2019599.2019600},
 	acmid = {2019600},
 	publisher = {ACM},
 	address = {New York, NY, USA},
 	keywords = {Vulnerability detection, checksum-aware fuzzing, symbolic execution, taint analysis},
+}
+
+@inproceedings{HAM06,
+	author = {Dick Hamlet},
+	title = {When only random testing will do},
+	booktitle = {Proceedings of the 1st international workshop on Random testing},
+	series = {RT '06},
+	year = {2006},
+	isbn = {1-59593-457-X},
+	location = {Portland, Maine},
+	pages = {1--9},
+	numpages = {9},
+	doi = {10.1145/1145735.1145737},
+	acmid = {1145737},
+	publisher = {ACM},
+	address = {New York, NY, USA},
+	keywords = {random vs. systematic testing, testing theory},
+}
+
+@book{KOKR07,
+	author = {Israel Koren and C. Mani Krishna},
+	title = {Fault-Tolerant Systems},
+	year = {2007},
+	isbn = {0120885255, 9780080492681},
+	publisher = {Morgan Kaufmann Publishers Inc.},
+	address = {San Francisco, CA, USA},
 } 
