--- a/pub/fuzzer.tex
+++ b/pub/fuzzer.tex
@@ -36,20 +36,25 @@ This is the text of the abstract.
 term1, term2
 
 \keywords
-Programming Languages, Compiler,
+Programming Languages, Compiler, Fuzzing, Unit Testing
 
 \section{Introduction}
 
 \cite{C99}
 
 \begin{itemize}
-	\item The common case in this experiment is the human factor
+	\item The common case in this experiment is the human factor, how the program responds to human errors (syntax, mistypes).
+	\item The fuzzer that messes with variables and their values follows the standard pattern that is used to test applications and enhance their security against input validation attacks.
 	\item Refactoring tools may act as fuzzers (they are programs and we have to assume that they have bugs), thus we are not measuring the resiliense of the programming languages against the human factor, we do it even against automated code refactoring tools.
 \end{itemize}
 
 \section{Related Work}
 
 Fuzzing ... \cite{TJC08}, \cite{WWGZ11}
+
+Testing ... \cite{HAM06}
+
+Fault Tolerance ... \cite{KOKR07}
 
 \section{Experiment}
 
@@ -64,6 +69,7 @@ Dow & \\
 FlatList & \\
 FuncComp & \\
 Horner & \\
+Hello & A typical ``hello, world!'' program\\
 \hline
 \end{tabular}
 \end{center}
