adding more publications

--- a/pub/fuzzer.bib
+++ b/pub/fuzzer.bib
@@ -63,4 +63,13 @@
 	isbn = {0120885255, 9780080492681},
 	publisher = {Morgan Kaufmann Publishers Inc.},
 	address = {San Francisco, CA, USA},
+}
+
+@book{LYU95,
+	author = {Michael R. Lyu},
+	title = {Software Fault Tolerance},
+	year = {1995},
+	isbn = {0471950688},
+	publisher = {John Wiley \& Sons, Inc.},
+	address = {New York, NY, USA},
 } 
