--- a/pub/fuzzer.tex
+++ b/pub/fuzzer.tex
@@ -54,7 +54,7 @@ Fuzzing ... \cite{TJC08}, \cite{WWGZ11}
 
 Testing ... \cite{HAM06}
 
-Fault Tolerance ... \cite{KOKR07}
+Fault Tolerance ... \cite{KOKR07}, \cite{LYU95}
 
 \section{Experiment}
 
