--- a/pub/fuzzer.tex
+++ b/pub/fuzzer.tex
@@ -74,6 +74,8 @@ FuncComp & \\
 Horner & \\
 Hello & A typical ``hello, world!'' program\\
 Mult & \\
+MutRecursion & \\
+ManBoy & \\
 \hline
 \end{tabular}
 \end{center}
@@ -92,8 +94,6 @@ We measure:
 	\item Execution Failure: if the program is executing correctly (without crashing)
 	\item Result Error: if the program is not producing the proper result
 \end{itemize}
-
-
 
 \subsection{Results}
 
