Add table of tested languages

--- a/pub/fuzzer.tex
+++ b/pub/fuzzer.tex
@@ -54,6 +54,30 @@ Programming Languages, Compiler, Fuzzing, Unit Testing
 \section{Methodology} % {{{1
 \begin{table}
 \begin{center}
+\caption{Tested languages.}
+\label{tab:langs}
+\begin{tabular}{ l l}
+ \hline
+Language & Implementation \\
+\hline
+Java 		& OpenJDK 1.6.0\_18 \\
+C 		& gcc 4.4.5 \\
+C++ 		& g++ 4.4.5 \\
+PHP 		& PHP 5.3.3-7 \\
+C\# 		& mono 2.6.7, CLI v2.0 \\
+Python 		& python 2.6.6 \\
+Objective-C 	& GNU Objective-C 4.4.5 \\
+Perl 		& perl 5.10.1 \\
+Javascript 	& spidermonkey smjs 1.8.0 \\
+Haskell 	& ghc 6.12.1 \\
+Ruby 		& ruby 1.5.8 \\
+\hline
+\end{tabular}
+\end{center}
+\end{table}
+
+\begin{table}
+\begin{center}
 \caption{List of selected Rosseta Code tasks.}
 \label{tab:Tasks}
 \begin{tabular}{ l p{4cm}}
