Add language selection rationale

--- a/pub/fuzzer.bib
+++ b/pub/fuzzer.bib
@@ -73,3 +73,16 @@
 	publisher = {John Wiley \& Sons, Inc.},
 	address = {New York, NY, USA},
 } 
+
+@article{Kin11,
+	author = {Ritchie S. King},
+	title = {The Top 10 Programming Languages},
+	journal = {IEEE Spectrum},
+	volume = {48},
+	number = {10},
+	month = oct,
+	year = {2011},
+	pages = {84},
+	doi = {10.1109/MSPEC.2011.6027266}
+}
+
