--- a/pub/fuzzer.tex
+++ b/pub/fuzzer.tex
@@ -88,6 +88,8 @@ From the superset of the popular languages listed in those
 sources we excluded
 Actionscript, Visual Basic, {\sc sql}, and the Unix shell,
 because the corresponding programs would not match our methods.
+According to the source composition,
+our language coverage ranges from 71\% to 86\% of all languages.
 The list of languages we used in our study and the
 particular implementations we used are listed in
 Table~\ref{tab:lang}.
