Add reference to grammar-based white box fuzzing

--- a/pub/fuzzer.bib
+++ b/pub/fuzzer.bib
@@ -86,3 +86,20 @@
 	doi = {10.1109/MSPEC.2011.6027266}
 }
 
+
+@inproceedings{God08,
+	author = {Godefroid, Patrice and Kiezun, Adam and Levin, Michael Y.},
+	title = {Grammar-based whitebox fuzzing},
+	booktitle = {Proceedings of the 2008 ACM SIGPLAN Conference on Programming Language Design and Implementation},
+	series = {PLDI '08},
+	year = {2008},
+	isbn = {978-1-59593-860-2},
+	location = {Tucson, AZ, USA},
+	pages = {206--215},
+	numpages = {10},
+	doi = {10.1145/1375581.1375607},
+	acmid = {1375607},
+	publisher = {ACM},
+	address = {New York, NY, USA},
+	keywords = {automatic test generation, grammars, program verification, software testing},
+}
