--- a/pub/fuzzer.tex
+++ b/pub/fuzzer.tex
@@ -120,7 +120,8 @@ Fuzzing types
 \item Replace one random token with another.
 This simulates abbsent-mindendness 
 \end{itemize}
-the fuzzer result is deterministic
+
+the fuzzer result is deterministic? Each time we executed the fuzzer to the source, it produces the same permutation of the code?
 
 We measure:
 
