added missing ambersants in task table

--- a/pub/fuzzer.tex
+++ b/pub/fuzzer.tex
@@ -101,19 +101,20 @@ Table~\ref{tab:lang}.
  \hline
 Task Name & Description\\
 \hline
-AccumFactory \\
-Beers \\
-Dow \\
-FlatList \\
-FuncComp \\
-Horner \\
+AccumFactory & \\
+Beers & \\
+Dow & \\
+FlatList & \\
+FuncComp & \\
+Horner & \\
 Hello & A typical ``hello, world!'' program\\
-Mult \\
-MutRecursion \\
-ManBoy \\
-Power \\
-Substring \\
-ZigZag \\
+Mult & \\
+MutRecursion & \\
+ManBoy & \\
+Power & \\
+Substring & \\
+Tokenizer & \\
+ZigZag & \\
 \hline
 \end{tabular}
 \end{center}
