Add classic Miller reference

--- a/pub/fuzzer.bib
+++ b/pub/fuzzer.bib
@@ -103,3 +103,14 @@
 	address = {New York, NY, USA},
 	keywords = {automatic test generation, grammars, program verification, software testing},
 }
+
+@Article{MFS90,
+	Title="An Empirical Study of the Reliability of {UNIX} Utilities",
+	Author="Barton P. Miller and Lars Fredriksen and Bryan So",
+	Journal="Communications of the ACM",
+	Volume="33",
+	Number="12",
+	Pages="32--44",
+	Month=dec,
+	Year="1990"
+	}
