--- a/pub/fuzzer.tex
+++ b/pub/fuzzer.tex
@@ -29,7 +29,6 @@
 \maketitle
 
 \begin{abstract}
-This is the text of the abstract.
 \end{abstract}
 
 \category{CR-number}{subcategory}{third-level}
@@ -202,6 +201,9 @@ Mult &  42 & 100 & 50 & 57 & 100 & 33 & 42 & 66 & 100 & 57 & 100 & 100 & 42 & 10
 
 \section{Related Work} % {{{1
 
+Fuzzing as a technique to investigate the reliability of software
+was first proposed in an article by Miller and his colleagues~\cite{MFS90}.
+In that they describe how ... % XXX 
 Fuzzing ... \cite{TJC08}, \cite{WWGZ11}
 
 Out approach fuzzes the program with pseudo-random
