--- a/pub/fuzzer.tex
+++ b/pub/fuzzer.tex
@@ -85,8 +85,8 @@ references in online discussions on {\sc irc}, and
 number of job posts on Craigslist.
 From the superset of the popular languages listed in those
 sources we excluded
-Actionscript, Visual Basic, {\sc sql}, and the Unix shell,
-because the corresponding programs would not match our methods.
+Actionscript, Visual Basic, {\sc sql}, Objective C, and the Unix shell,
+because the corresponding programs or infrastructure would not match our methods.
 According to the source composition,
 our language coverage ranges from 71\% to 86\% of all languages.
 The list of languages we used in our study and the
