added language per task

--- a/pub/fuzzer.tex
+++ b/pub/fuzzer.tex
@@ -146,7 +146,7 @@ We measure:
 \label{tbl:lang-}
 \begin{tabular}{l c c c c c c c c c c}
  \hline
- & C & C++ & C\# & Java & Javascript & PHP & Perl & Python & Ruby\\
+ & C & C++ & C\# & Haskell & Java & Javascript & PHP & Perl & Python & Ruby\\
 \hline
 AccumFactory & \Checkmark & \Checkmark & \Checkmark & \Checkmark & \Checkmark & \Checkmark & \Checkmark & \Checkmark & \Checkmark & \Checkmark \\
 Hello & \Checkmark & \Checkmark & \Checkmark & \Checkmark & \Checkmark & \Checkmark & \Checkmark & \Checkmark & \Checkmark & \Checkmark \\
@@ -162,6 +162,8 @@ Horner & \Checkmark & \Checkmark & \Checkmark & \Checkmark & \Checkmark & \Check
 MutRecursion & \Checkmark & \Checkmark & \Checkmark & \Checkmark & \Checkmark & \Checkmark & \Checkmark & \Checkmark & \Checkmark & \Checkmark \\
 Dow & \Checkmark & \Checkmark & \Checkmark & \Checkmark & \Checkmark & \Checkmark & \Checkmark & \Checkmark & \Checkmark & \Checkmark \\
 Mult & \Checkmark & \Checkmark & \Checkmark & \Checkmark & \Checkmark & \Checkmark & \Checkmark & \Checkmark & \Checkmark & \Checkmark \\
+\hline
+ & 14 & 12 & 11 & 10 & 13 & 13 & 14 & 14 & 14 & 14 \\
 \hline
 \end{tabular}
 \end{center}
