--- a/pub/fuzzer.tex
+++ b/pub/fuzzer.tex
@@ -19,8 +19,8 @@
 %\titlebanner{banner above paper title}        % These are ignored unless
 %\preprintfooter{short description of paper}   % 'preprint' option specified.
 
-\title{Still Thinking About it!}
-%\subtitle{Subtitle Text, if any}
+\title{Programming Languages vs. Fat Fingers}
+\subtitle{An Empirical Study}
 
 \authorinfo{Diomidis Spinellis\and Vassilios Karakoidas}
            {Athens University of Economics and Business}
