--- a/pub/fuzzer.tex
+++ b/pub/fuzzer.tex
@@ -55,7 +55,7 @@ Programming Languages, Compiler, Fuzzing, Unit Testing
 \begin{itemize}
 	\item The common case in this experiment is the human factor, how the program responds to human errors (syntax, mistypes).
 	\item The fuzzer that messes with variables and their values follows the standard pattern that is used to test applications and enhance their security against input validation attacks.
-	\item The work presented here, could measure the fault tolerance for these languages. There is a generic term ``software fault tolerance'', which describes te
+	\item The work presented here, could measure the fault tolerance for these languages. There is a generic term ``software fault tolerance''.
 	\item Refactoring tools may act as fuzzers (they are programs and we have to assume that they have bugs), thus we are not measuring the resiliense of the programming languages against the human factor, we do it even against automated code refactoring tools.
 \end{itemize}
 
@@ -69,7 +69,7 @@ Programming Languages, Compiler, Fuzzing, Unit Testing
  \hline
 Language & Implementation \\
 \hline
-C 		& gcc 4.4.5 \\
+C 			& gcc 4.4.5 \\
 C++ 		& g++ 4.4.5 \\
 C\# 		& mono 2.6.7, CLI v2.0 \\
 Haskell 	& ghc 6.12.1 \\
