adding descriptions to tasks (work in progress)

--- a/pub/fuzzer.tex
+++ b/pub/fuzzer.tex
@@ -105,18 +105,18 @@ Table~\ref{tab:lang}.
 \begin{center}
 \caption{List of selected Rosseta Code tasks.}
 \label{tab:Tasks}
-\begin{tabular}{ l p{4cm}}
+\begin{tabular}{ l p{5cm}}
  \hline
 Task Name & Description\\
 \hline
-AccumFactory \\
+AccumFactory & Accumulator Generator as described by Paul Graham \footnote{\url{http://paulgraham.com/accgensub.html}}\\
 Beers \\
-Dow \\
-FlatList \\
-FuncComp \\
-Horner \\
+Dow & Detects all years (in a range) that christmas is a Sunday\\
+FlatList & Flattens a series of nested lists\\
+FuncComp & Implementation of mathematical function composition\\
+Horner & Horner's rule for polynomial evaluation\\
 Hello & A typical ``hello, world!'' program\\
-Mult \\
+Mult & Ethiopian Multiplication. A method to multiply integers using only addition, doubling and halving.\\
 MutRecursion \\
 ManBoy \\
 Power \\
@@ -155,7 +155,7 @@ We measure:
 \begin{table*}
 % ['c', 'cpp', 'cs', 'hs', 'java', 'js', 'php', 'pl', 'py', 'rb']
 \begin{center}
-\caption{Language Compatibility per Task}
+\caption{Language Compatibility per Task.}
 \label{tbl:lang-compatibility}
 \begin{tabular}{l c c c c c c c c c c}
  \hline
